DevOCL/src/objects/CLQ_Inspector__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Inspector object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Inspectors</relationshipLabel>
        <relationshipName>Inspectors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspector_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspector Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inspector</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Inspector Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>